# instagram-posts-generator-agent

./: .cursorrules  .env.example  .gitignore  README.md  config.py  db.py  escopo_agente_instagram.md  gerador_conteudo.py  gerador_design.py  pyproject.toml
src/: __init__.py  cli.py
src/core/: __init__.py  config.py  database.py
src/tools/: __init__.py
src/tools/ebook/: __init__.py  content.py  design.py
src/tools/ebook/templates/: ebook_template.html
src/tools/instagram/: README.md  __init__.py  content.py  design.py  escopo_agente_instagram.md
src/tools/instagram/templates/: card_template.html
src/tools/youtube_to_obsidian/: README.md  __init__.py  downloader.py  escopo_youtube_to_obsidian.md  estudar_video.py  gerenciador_obsidian.py  processador_audio.py
templates/: card_template.html
