[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.9.0",
    "jinja2>=3.1.6",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyperclip>=1.9.0",
    "yt-dlp>=2025.2.19",
]

[project.scripts]
agent = "src.cli:main"

